--- a/frontend/src/components/Card.css
+++ b/frontend/src/components/Card.css
@@ -15,11 +15,20 @@
     background-color: #242424;
 }
 
-.mainContainer {
+.mainContainerBot {
     width: 100%;
     height: 100%;
     min-height: 100px;
     border-radius: 0 0 5% 5%;
+    background-color: #2e2e2e;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+}
+
+.mainContainerAll {
+    width: 100%;
+    height: 100%;
+    min-height: 100px;
+    border-radius: 5%;
     background-color: #2e2e2e;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
