Clicking to disable thrusters is now enabled, thruster slider auto-rendering not working (array.map() returning null for jsx elements...)

--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -931,3 +931,16 @@ button:disabled:hover {
 .c100.thruster-red>span {
     color: red;
 }
+
+.c100.thruster-grey .bar,
+.c100.thruster-grey .fill {
+    border-color: grey !important;
+}
+
+.c100.thruster-grey>span {
+    color: grey;
+}
+
+.select {
+    cursor: pointer;
+}
