--- a/frontend/src/components/ThrusterScales.css
+++ b/frontend/src/components/ThrusterScales.css
@@ -1,1 +1,16 @@
-.container {}
+.container {
+    height: 100%;
+    width: 100%;
+}
+
+.halfLeft {
+    width: calc(50% - 10px);
+    float: left;
+    box-sizing: border-box;
+}
+
+.halfRight {
+    width: calc(50% - 10px);
+    float: right;
+    box-sizing: border-box;
+}
