--- a/frontend/src/components/Cam_View.css
+++ b/frontend/src/components/Cam_View.css
@@ -1,7 +1,14 @@
 .preview {
     position: 'relative';
 }
-
+.butt{
+    height:60px;
+    width:50px;
+}
+.header {
+    display: flex;
+    position: relative;
+}
 .captureContainer {
     display: flex;
     position: absolute;
