--- a/surface/frontend/src/components/ESCinfo/ESCinfo.css
+++ b/surface/frontend/src/components/ESCinfo/ESCinfo.css
@@ -1,3 +1,19 @@
+.container {
+    text-align: center;
+}
+
+.numCount {
+    width: calc(25% - 10px);
+    float: left;
+    box-sizing: border-box;
+}
+
+.infoShow {
+    width: calc(75% - 10px);
+    float: right;
+    box-sizing: border-box;
+}
+
 .halfLeft {
     width: calc(50% - 10px);
     float: left;
@@ -13,12 +29,4 @@
 .squashed {
     margin-top: 0;
     margin-bottom: 0;
-}
-
-.time {
-    text-align: center;
-}
-
-.amplitude {
-    text-align: center;
 }
